--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
  }
 
  :root {
-    --bg-color:#1f242d;
-    --second-bg-color:#323946;
-    --text-color:#fff;
-    --main-color:#0ef; 
+    --bg-color:#8294C4;
+    --second-bg-color:#ACB1D6;
+    --text-color:#DBDFEA;
+    --main-color:#FFEAD2; 
  }
 
  html{
