--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
  }
 
  :root {
-    --bg-color:#8294C4;
-    --second-bg-color:#ACB1D6;
+    --bg-color:#ACB1D6;
+    --second-bg-color:#8294C4;
     --text-color:#DBDFEA;
     --main-color:#FFEAD2; 
  }
