--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
  }
 
  :root {
-    --bg-color:#ACB1D6;
-    --second-bg-color:#8294C4;
-    --text-color:#DBDFEA;
-    --main-color:#FFEAD2; 
+    --bg-color:#0B2447;
+    --second-bg-color:#19376D;
+    --text-color:#576CBC;
+    --main-color:#A5D7E8; 
  }
 
  html{
