--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
  }
 
  :root {
-    --bg-color:#0B2447;
-    --second-bg-color:#19376D;
-    --text-color:#576CBC;
-    --main-color:#A5D7E8;
+    --bg-color:#0A2647;
+    --second-bg-color:#144272;
+    --text-color:#205295;
+    --main-color:#B6EADA;
  }
 
  html{
