--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
  :root {
     --bg-color:#0A2647;
     --second-bg-color:#144272;
-    --text-color:#10367e;
-    --main-color:#c3eade;
+    --text-color:#80a3e3;
+    --main-color:#e3ea99;
  }
 
  html{
