--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
     --bg-color:#0A2647;
     --second-bg-color:#144272;
     --text-color:#80a3e3;
-    --name-text-color:#e3e180;
-    --main-color:#e3ea99;
+    --name-text-color:#ECDBBA;
+    --main-color:#F0CAA3;
  }
 
  html{
