--- a/style.css
+++ b/style.css
@@ -85,11 +85,13 @@
    color: var(--name-text-color);
     font-size: 3.2rem;
     font-weight: 700;
+    align-items: left;
 
  }
  .home-content h3:nth-of-type(2){
    color: var(--name-text-color);
    margin-bottom: 1rem;
+   align-items: left;
  }
 
  span{
@@ -100,6 +102,7 @@
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.0;
+    align-items: left;
  }
 
  .social-media a {
