--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --bg-color:#0A2647;
     --second-bg-color:#144272;
     --text-color:#80a3e3;
-    --name-text-color:#FCA652;
+    --name-text-color:#072444;
     --main-color:#FFD57E;
  }
 
