--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --bg-color:#0A2647;
     --second-bg-color:#144272;
     --text-color:#80a3e3;
-    --name-text-color:#072444;
+    --name-text-color:#0A2647;
     --main-color:#FFD57E;
  }
 
@@ -143,14 +143,12 @@
  }
 
  .about{
+
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
     background: var(--second-bg-color);
- }
- .about-img img{
-    width: 35rem;
  }
 
  .heading{
@@ -169,7 +167,7 @@
 
  .about-content p{
     font-size: 1.6rem;
-    margin: 2rem 0 3rem;
+    margin: 1rem 0 1rem;
  }
  .services h2{
    margin-bottom: 5rem;
