--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@
     font-size: 4.5rem;
  }
 
+ .about-content {
+   margin: 1rem;
+   padding: 1rem;
+ }
  .about-content h2{
     text-align: left;
     line-height: 1.2;
