--- a/style.css
+++ b/style.css
@@ -119,6 +119,19 @@
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
  }
+ .skills-button{
+   display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 10rem;
+    border: .5rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 10rem;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+ }
  .social-media a:hover{
     background: var(--main-color);
     color: var(--second-bg-color);
@@ -423,7 +436,9 @@
       padding: 0rem;
       margin : 0rem;
    }
-
+   .skills-content{
+      font-size: 2.6rem;
+   }
    .services h2{
       margin-bottom: 3rem;
    }
