--- a/myproject/style.css
+++ b/myproject/style.css
@@ -13,10 +13,11 @@
  }
 
  :root {
-    --bg-color:#1f242d;
-    --second-bg-color:#323946;
-    --text-color:#fff;
-    --main-color:#0ef; 
+    --bg-color:#0A2647;
+    --second-bg-color:#144272;
+    --text-color:#80a3e3;
+    --name-text-color:#0A2647;
+    --main-color:#FFD57E;
  }
 
  html{
@@ -30,9 +31,9 @@
     color: var(--text-color);
  }
 
- section{
+section{
     min-height: 100vh;
-    padding: 10rem 9% 2rem;
+    padding: 2rem 4% 2rem;
  }
  .header{
     position: fixed;
@@ -74,59 +75,60 @@
     display: none;
  }
 
- .home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+ .home-content{
+   padding : 2rem;
+   margin: 5rem;
  }
-
- .home-img img{
-    width:35vw ;
-    /*animation: floatImage 4s ease-in-out infinite;*/
- }
-
- @keyframes floatImage{
-   0%{
-      transform: translateY(0);
-
-   }
-   50%{
-      transform: translateY(-22.4rem);
-   }
-   100%{
-      transform: translateY(0);
-   }
-
- }
-
  .home-content h3 {
+   color: var(--name-text-color);
     font-size: 3.2rem;
     font-weight: 700;
+    align-items: left;
 
  }
  .home-content h3:nth-of-type(2){
-    margin-bottom: 2rem;
+   color: var(--name-text-color);
+   margin-bottom: 1rem;
+   align-items: left;
  }
 
+.multiple-text{
+   color: var(--bg-color);
+}
  span{
     color: var(--main-color);
  }
  .home-content h1{
+   color: var(--name-text-color);
     font-size: 5.6rem;
     font-weight: 700;
-    line-height: 1.3;
+    line-height: 1.0;
+    align-items: left;
  }
 
  .social-media a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 5rem;
     background: transparent;
     border: .2rem solid var(--main-color);
     border-radius: 50%;
-    font-size: 2rem;
+    font-size: 4rem;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+ }
+ .skills-button{
+   display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 12rem;
+    height: 12rem;
+    border: .5rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 12rem;
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
@@ -156,13 +158,9 @@
 
  .about{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+    padding: 3rem;
+    min-height: 70vh;
     background: var(--second-bg-color);
- }
- .about-img img{
-    width: 35rem;
  }
 
  .heading{
@@ -170,8 +168,11 @@
     font-size: 4.5rem;
  }
 
+ .about-content {
+   padding: 2rem;
+   min-height: 70vh;
+ }
  .about-content h2{
-    text-align: left;
     line-height: 1.2;
  }
 
@@ -179,9 +180,49 @@
     font-size: 2.6rem;
  }
 
+ .about-content h4{
+   font-size: 1.6rem;
+ }
+
  .about-content p{
     font-size: 1.6rem;
-    margin: 2rem 0 3rem;
+    margin: 1rem 0 1rem;
+ }
+
+ .skills-content h3{
+   font-size: 2.6rem;
+ }
+
+ .experience{
+   background: var(--second-bg-color);
+ }
+
+ .experiences-container{
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   gap: 2rem;
+ }
+
+ .experiences-container .experiences-box{
+   margin-bottom: 1rem;
+   padding: 3rem 2rem 4rem;
+   border-radius: 2rem;
+   flex: 1 1 30rem;
+   border: .2rem solid var(--main-color);
+   transition: .5s ease;
+   border-radius: 2rem;
+   height: 20rem;
+ }
+
+ .experiences-container .experiences-box h2{
+   font-size: 2.4rem;
+ }
+ .experiences-container .experiences-box h3{
+   font-size: 1.8rem;
+ }
+ .experiences-container .experiences-box p{
+   font-size: 1.5rem;
  }
  .services h2{
    margin-bottom: 5rem;
@@ -218,9 +259,7 @@
    font-size: 1.6rem;
    margin: 1rem 0 3rem;
  }
- .portfolio{
-   background: var(--second-bg-color);
- }
+ 
 .portfolio h2{
    margin-bottom: 4rem;
 }
@@ -416,6 +455,7 @@
    }
    .home{
       flex-direction: column;
+      display: flex; 
    }
    .home-content h3{
       font-size: 2.6rem;
@@ -429,11 +469,11 @@
    }
    .about{
       flex-direction: column-reverse;
+      padding: 0rem;
+      margin : 0rem;
    }
-
-   .about img{
-      width: 70vw;
-      margin-top: 4rem;
+   .skills-content{
+      font-size: 2.6rem;
    }
    .services h2{
       margin-bottom: 3rem;
