--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 
  :root {
     --bg-color:#0A2647;
-    --second-bg-color:#144272;
-    --text-color:#80a3e3;
+    --second-bg-color:#123c69 ;
+    --text-color:#9ab8f0;
     --name-text-color:#0A2647;
     --main-color:#FFD57E;
  }
@@ -161,6 +161,7 @@ section{
     padding: 3rem;
     min-height: 70vh;
     background: var(--second-bg-color);
+    
  }
 
  .heading{
